# Chess-Engine

./: .gitignore  Cargo.toml  Makefile  README.md
src/: api.rs  attack.rs  bitboard.rs  board.rs  constants.rs  engine.rs  evaluate.rs  hash.rs  initialize.rs  lib.rs  main.rs  move_generation.rs  piece.rs  polyglot.rs  position.rs  square.rs  time.rs  types.rs  uci.rs  update.rs  utils.rs  zobrist_hash.rs
src/binaries/: cli.rs  uci.rs
tests/: api_tests.rs  draw_tests.rs  evaluation_tests.rs  fen_loading_test.rs  hash_test_utils.rs  hash_tests.rs  move_generation_tests.rs  perft_tests.rs  principal_variation_tests.rs  search_tests.rs  statistics_tests.rs  test_utils.rs  zobrist_hash_tests.rs
