[package]
name = "chess_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "chess_engine"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
api = ["serde", "serde_json"]

[[bin]]
name = "chess_engine_cli"
path = "src/main.rs"

[[bin]]
name = "chess_engine_uci"
path = "src/uci_main.rs"
