[package]
name = "bitboard_chess_engine"
version = "0.1.2"
edition = "2024"
authors = ["Brendan Dagys <brendandagys@gmail.com>"]
description = "A chess engine with UCI support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brendandagys/Chess-Engine"
keywords = ["chess", "engine", "uci", "game"]
categories = ["games"]

default-run = "chess-engine-cli"

[lib]
name = "chess_engine"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[[bin]]
name = "chess-engine-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "chess-engine-uci"
path = "src/bin/uci.rs"
